exports[`Component > EditBundle renders correctly 1`] = `
<div
  className="panel panel-default">
  <div
    className="panel-heading clearfix " />
  <div
    className="panel-body">
    <form
      enctype="multipart/form-data"
      method="post"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <label>
          Grid name
        </label>
        <input
          className="form-control"
          name="Name"
          onChange={[Function]}
          placeholder="Grid name"
          type="text"
          value={undefined} />
      </div>
      <div
        className="form-group">
        <label>
          Grid files
        </label>
        <input
          className="form-control"
          files={undefined}
          multiple={true}
          name="files"
          onChange={[Function]}
          placeholder="Grid files"
          type="file"
          value={undefined} />
      </div>
      <input
        className="btn btn-block btn-success"
        disabled={true}
        type="submit"
        value={undefined} />
    </form>
  </div>
</div>
`;

exports[`Component > EditBundle renders csv upload correctly 1`] = `
<CreateGrid
  finish={[Function]}
  projectId="PROJECT ID">
  <Panel>
    <div
      className="panel panel-default">
      <Heading>
        <div
          className="panel-heading clearfix " />
      </Heading>
      <Body>
        <div
          className="panel-body">
          <form
            enctype="multipart/form-data"
            method="post"
            onSubmit={[Function]}>
            <Text
              label="Grid name"
              name="Name"
              onChange={[Function]}
              placeholder="Grid name">
              <Group
                label="Grid name"
                name="Name"
                onChange={[Function]}
                placeholder="Grid name">
                <div
                  className="form-group">
                  <label>
                    Grid name
                  </label>
                  <Input
                    label="Grid name"
                    name="Name"
                    onChange={[Function]}
                    placeholder="Grid name"
                    type="text">
                    <input
                      className="form-control"
                      name="Name"
                      onChange={[Function]}
                      placeholder="Grid name"
                      type="text" />
                  </Input>
                </div>
              </Group>
            </Text>
            <File
              files={
                Array [
                  File {
                    Symbol(buffer): Object {
                      "data": Array [
                        88,
                        44,
                        89,
                        44,
                        118,
                        97,
                        108,
                        117,
                        101,
                      ],
                      "type": "Buffer",
                    },
                    Symbol(type): "",
                    Symbol(closed): false,
                    Symbol(name): "TEST.CSV",
                    Symbol(lastModified): 1481916245840,
                  },
                ]
              }
              label="Grid files"
              multiple={true}
              name="files"
              onChange={[Function]}>
              <Group
                files={
                  Array [
                    File {
                      Symbol(buffer): Object {
                        "data": Array [
                          88,
                          44,
                          89,
                          44,
                          118,
                          97,
                          108,
                          117,
                          101,
                        ],
                        "type": "Buffer",
                      },
                      Symbol(type): "",
                      Symbol(closed): false,
                      Symbol(name): "TEST.CSV",
                      Symbol(lastModified): 1481916245840,
                    },
                  ]
                }
                label="Grid files"
                multiple={true}
                name="files"
                onChange={[Function]}>
                <div
                  className="form-group">
                  <label>
                    Grid files
                  </label>
                  <Input
                    files={
                      Array [
                        File {
                          Symbol(buffer): Object {
                            "data": Array [
                              88,
                              44,
                              89,
                              44,
                              118,
                              97,
                              108,
                              117,
                              101,
                            ],
                            "type": "Buffer",
                          },
                          Symbol(type): "",
                          Symbol(closed): false,
                          Symbol(name): "TEST.CSV",
                          Symbol(lastModified): 1481916245840,
                        },
                      ]
                    }
                    label="Grid files"
                    multiple={true}
                    name="files"
                    onChange={[Function]}
                    type="file">
                    <input
                      className="form-control"
                      files={
                        Array [
                          File {
                            Symbol(buffer): Object {
                              "data": Array [
                                88,
                                44,
                                89,
                                44,
                                118,
                                97,
                                108,
                                117,
                                101,
                              ],
                              "type": "Buffer",
                            },
                            Symbol(type): "",
                            Symbol(closed): false,
                            Symbol(name): "TEST.CSV",
                            Symbol(lastModified): 1481916245840,
                          },
                        ]
                      }
                      multiple={true}
                      name="files"
                      onChange={[Function]}
                      placeholder="Grid files"
                      type="file" />
                  </Input>
                </div>
              </Group>
            </File>
            <span>
              <Text
                label="Latitude field"
                name="latField"
                onChange={[Function]}
                placeholder="Latitude field">
                <Group
                  label="Latitude field"
                  name="latField"
                  onChange={[Function]}
                  placeholder="Latitude field">
                  <div
                    className="form-group">
                    <label>
                      Latitude field
                    </label>
                    <Input
                      label="Latitude field"
                      name="latField"
                      onChange={[Function]}
                      placeholder="Latitude field"
                      type="text">
                      <input
                        className="form-control"
                        name="latField"
                        onChange={[Function]}
                        placeholder="Latitude field"
                        type="text" />
                    </Input>
                  </div>
                </Group>
              </Text>
              <Text
                label="Longitude field"
                name="lonField"
                onChange={[Function]}
                placeholder="Longitude field">
                <Group
                  label="Longitude field"
                  name="lonField"
                  onChange={[Function]}
                  placeholder="Longitude field">
                  <div
                    className="form-group">
                    <label>
                      Longitude field
                    </label>
                    <Input
                      label="Longitude field"
                      name="lonField"
                      onChange={[Function]}
                      placeholder="Longitude field"
                      type="text">
                      <input
                        className="form-control"
                        name="lonField"
                        onChange={[Function]}
                        placeholder="Longitude field"
                        type="text" />
                    </Input>
                  </div>
                </Group>
              </Text>
            </span>
            <input
              className="btn btn-block btn-success"
              disabled={true}
              type="submit" />
          </form>
        </div>
      </Body>
    </div>
  </Panel>
</CreateGrid>
`;
